--- a/tests/Tests.ipynb
+++ b/tests/Tests.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import os\n",
     "\n",
-    "from kicad_helpers import get_project_name, get_schematic_path, get_bom_path"
+    "from kicad_helpers import get_schematic_path, get_bom_path"
    ]
   },
   {
@@ -22,14 +22,6 @@
     "assert os.path.exists(get_schematic_path()) # Check that schematic exists\n",
     "assert os.path.exists(get_bom_path()) # Check that the BOM exists"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbb60528-e86a-4135-b886-2159965f1f0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
